CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(metoritewars)

SET(METORITEWARS_ROOT_PATH ${PROJECT_BINARY_DIR})
SET(METORITEWARS_SOURCE_PATH ${METORITEWARS_ROOT_PATH}/src)
SET(METORITEWARS_BIN_PATH ${METORITEWARS_ROOT_PATH}/bin)
SET(METORITEWARS_EXEC_NAME metoritewars)

SET(EXECUTABLE_OUTPUT_PATH ${METORITEWARS_BIN_PATH})

FILE(GLOB_RECURSE METORITEWARS_SOURCE_FILES ${METORITEWARS_SOURCE_PATH}/*.cpp)

SET(CMAKE_CPP_FLAGS "-g -Wall")

ADD_EXECUTABLE(${METORITEWARS_EXEC_NAME} ${METORITEWARS_SOURCE_FILES})

IF(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
  INCLUDE_DIRECTORIES(SYSTEM /c/MinGW/include /c/MinGW/freeglut/include)
  LINK_DIRECTORIES(/c/MinGW/lib /c/MinGW/freeglut/lib)
  TARGET_LINK_LIBRARIES(${METORITEWARS_EXEC_NAME} -lopengl32 -lfreeglut -lglu32)
ENDIF()

IF(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
  TARGET_LINK_LIBRARIES(${METORITEWARS_EXEC_NAME} -lX11 -lGL -lGLU -lglut)
ENDIF()


INSTALL(TARGETS ${METORITEWARS_EXEC_NAME} DESTINATION /usr/bin/)
