CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(metoritewars)

SET(METORITEWARS_ROOT_PATH ${PROJECT_BINARY_DIR})
SET(METORITEWARS_SOURCE_PATH ${METORITEWARS_ROOT_PATH}/src)
SET(METORITEWARS_TEST_SOURCE_PATH ${METORITEWARS_ROOT_PATH}/test)
SET(METORITEWARS_BIN_PATH ${METORITEWARS_ROOT_PATH}/bin)
SET(METORITEWARS_EXEC_NAME metoritewars)
SET(METORITEWARS_TEST_EXEC_NAME metoritewars_test)

SET(EXECUTABLE_OUTPUT_PATH ${METORITEWARS_BIN_PATH})

FILE(GLOB_RECURSE METORITEWARS_SOURCE_FILES ${METORITEWARS_SOURCE_PATH}/*.cpp)
FILE(GLOB_RECURSE METORITEWARS_TEST_SOURCE_FILES ${METORITEWARS_TEST_SOURCE_PATH}/*.cpp)
SET(METORITEWARS_TEST_SOURCE_FILES ${METORITEWARS_TEST_SOURCE_FILES} src/KeyBuffer.cpp src/Object.cpp)

LIST(REMOVE_ITEM METORITEWARS_TEST_SOURCE_FILES main.cpp)

SET(CMAKE_CXX_FLAGS "-g -Wall")

ADD_EXECUTABLE(${METORITEWARS_EXEC_NAME} ${METORITEWARS_SOURCE_FILES})
ADD_EXECUTABLE(${METORITEWARS_TEST_EXEC_NAME} ${METORITEWARS_TEST_SOURCE_FILES})

IF(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
  TARGET_LINK_LIBRARIES(${METORITEWARS_EXEC_NAME} -lopengl32 -lglu32 -lfreeglut -lglaux -lglew32)
  TARGET_LINK_LIBRARIES(${METORITEWARS_TEST_EXEC_NAME} -lopengl32 -lglu32 -lfreeglut -lglaux -lglew32 -lcppunit)
ENDIF()
IF(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
  TARGET_LINK_LIBRARIES(${METORITEWARS_EXEC_NAME} -lGL -lGLU -lglut -lSDL)
  TARGET_LINK_LIBRARIES(${METORITEWARS_TEST_EXEC_NAME} -lGL -lGLU -lglut -lSDL -lcppunit)
ENDIF()


INSTALL(TARGETS ${METORITEWARS_EXEC_NAME} DESTINATION /usr/bin/)
